made some changes, color

--- a/equinoxsdrones.com/index.html
+++ b/equinoxsdrones.com/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from equinoxsdrones.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 08:23:08 GMT -->
+<!-- Mirrored from Mechzilla Technologies.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 08:23:08 GMT -->
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=index.html"><TITLE>Page has moved</TITLE>
 </HEAD>
@@ -10,5 +10,5 @@
 </BODY>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from equinoxsdrones.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 08:23:08 GMT -->
+<!-- Mirrored from Mechzilla Technologies.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 08:23:08 GMT -->
 </HTML>
